Refactor events